Issue 13: Move FB 'Like' button so flyout doesn't go off screen.

--- a/SuffolkCycleRide/static/base/style/main-style.css
+++ b/SuffolkCycleRide/static/base/style/main-style.css
@@ -404,8 +404,7 @@ div#heading {
 }
 
 div.fb-like-pos {
-    top:0;
-    left:85%;
+    top:-25px;
     vertical-align: middle;
     position:absolute;
 }
